@@ -14,9 +14,9 @@ talk: - speaker: 0
         say: Well, I'm Giaccomo Paulas and I would like to hire you. My evil colleague has stolen my most precious programming tool and I need to get it back.
       - speaker: 0
         say: Guys, some pc-man says he has work for us. Doesn't sound very interesting, does it?
-      - speaker: 2
-        say: No, I won't play pacman. My sword wants blood and flash.
       - speaker: 3
+        say: No, I won't play pacman. My sword wants blood and flash.
+      - speaker: 2
         say: Sounds good - pc-men usually have fried-chicken-restaurant next to their office!
       - speaker: 0
         say: Good bye, ask someone else.
